[SD-121] Fix the overlap for the search bar (#4)

--- a/app/assets/stylesheets/public_website/search.css.scss
+++ b/app/assets/stylesheets/public_website/search.css.scss
@@ -190,7 +190,7 @@
     top: 28px;
     right: 0px;
     width: 0;
-    max-width: 410px;
+    max-width: 492px;
     z-index: 3;
     border-radius: 18px;
     padding: 5px 16px;
